--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,1 +1,4 @@
 <h1>Hello World</h1>
+
+
+  <%= react_component('ProfileInfo', photoUrl: "https://vignette.wikia.nocookie.net/logopedia/images/a/a4/Google-Currents-Featured-300x300.png/revision/latest?cb=20120704191200", bio: "Hello I am adam") %>
