Add some CSS to make images viewable

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+
+img {
+  max-width: 200px;
+  max-height: 200px;
+}
+
+div.photo-container {
+  display: inline-block;
+}
