Add some more basic and horrible css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,3 +22,12 @@ img {
 div.photo-container {
   display: inline-block;
 }
+
+div.profile-info {
+  max-height: 150px;
+  display: inline-block;
+}
+
+form {
+  display: inline-block;
+}
