--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Hello World</h1>
-<%= react_component('ProfileInfo', photoUrl: "https://vignette.wikia.nocookie.net/logopedia/images/a/a4/Google-Currents-Featured-300x300.png/revision/latest?cb=20120704191200", bio: "Hello I am adam") %>
+<!-- <%= react_component('ProfileInfo', photoUrl: "https://vignette.wikia.nocookie.net/logopedia/images/a/a4/Google-Currents-Featured-300x300.png/revision/latest?cb=20120704191200", bio: "Hello I am adam") %>
 <%= react_component('NewPhotoForm') %>
-<%= react_component('Timeline') %>
+<%= react_component('Timeline') %> -->
+<%= react_component('App') %>
