Uploaded AND DISPLAYED a photo through paperclip & erb

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,2 +1,20 @@
 <h1>Hello World</h1>
 <%= react_component('App') %>
+
+<%= form_for @photo do |f| %>
+ <%= f.file_field :photo %>
+ <%= f.submit "Post" %>
+<% end %>
+
+<%= image_tag @new_photo.photo.url(:medium)%>
+
+
+<!-- <section id="new-photo-form">
+        <p id="new-photo-form">Post a Photo</p>
+        <form method= "post" action="/photos">
+          <input type="file" name="photo[photo]" /><br />
+          <input type="hidden" name="photo[user_id]" value="1" /><br />
+          <textarea name="photo[blurb]" value="blup"></textarea><br />
+          <input type="submit" value="Post" />
+        </form>
+      </section> -->
