--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,24 @@
  *= require_tree .
  *= require_self
  */
+ img {
+   max-width: 100%;
+   max-height: 700px;
+ }
 
-img {
-  max-width: 200px;
-  max-height: 200px;
+.photo {
+  width: 600px;
+  height: 500px;
+  border-style: dotted;
+  border-color: green;
+  border-width: 2px;
+  border-radius: 15px;
+  margin-bottom: 20px;
+  /*display: block;
+  float: center;*/
+  margin-left: 35%;
+  margin-right: 35%;
+   background-color: #f8f8f8;
 }
 
 div.photo-container {
@@ -41,3 +55,8 @@ form {
 	list-style: none; }
 #nav li {
 	float: left; }
+  body {
+    /*position: absolute;*/
+    text-align: center;
+   align-items: center;
+  }
