Comment out non-react form field

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -3,11 +3,11 @@
 <%= react_component('App') %>
 
 
-<%= form_for @photo do |f| %>
- <%= f.file_field :photo %>
- <%= f.submit "Post" %>
-<% end %>
-<br>
+<!-- # <%= form_for @photo do |f| %>
+#  <%= f.file_field :photo %>
+#  <%= f.submit "Post" %>
+# <% end %>
+# <br> -->
 
 <% if false %>
 <%= image_tag @new_photo.photo.url(:medium) %>
